# evm

./: CMakeLists.txt
cmake/: copy_libraries.cmake
ext/: CMakeLists.txt  opencv.cmake
libs/: CMakeLists.txt
libs/evm/: CMakeLists.txt
libs/evm/include/evm/: capture.hpp  capturing_pipeline.hpp  data.hpp  display.hpp  evm_pipeline.hpp  fps_calculator.hpp  processor.hpp  pyramid.hpp  roi_capture.hpp  roi_filter.hpp  roi_reconstructor.hpp
libs/evm/include/evm/filter/: amplifier.hpp  ideal_bandpass_temporal_filter.hpp  laplace_spatial_filter.hpp  level_reconstructor.hpp  reconstructor.hpp  spatial_filter.hpp  temporal_filter.hpp
libs/evm/include/evm/impl/: display_video.hpp  display_video_orig.hpp  roi_blur_filter.hpp  roi_default.hpp  roi_default_reconstructor.hpp  roi_face_capture.hpp  roi_fix_capture.hpp  roi_position_reconstructor.hpp  video_capture.hpp  webcam_capture.hpp
libs/evm/src/: CMakeLists.txt  capturing_pipeline.cpp  display.cpp  evm_pipeline.cpp  fps_calculator.cpp  processor.cpp  pyramid.cpp
libs/evm/src/filter/: CMakeLists.txt  amplifier.cpp  ideal_bandpass_temporal_filter.cpp  laplace_pyramid.cpp  laplace_pyramid.hpp  laplace_spatial_filter.cpp  level_reconstructor.cpp  reconstructor.cpp
libs/evm/src/impl/: CMakeLists.txt  display_video.cpp  display_video_orig.cpp  roi_blur_filter.cpp  roi_default.cpp  roi_default_reconstructor.cpp  roi_face_capture.cpp  roi_fix_capture.cpp  roi_position_reconstructor.cpp  video_capture.cpp  webcam_capture.cpp
libs/processing/: CMakeLists.txt
libs/processing/include/processing/: filter.hpp  laplace_pyramid.hpp  queue_worker.hpp
libs/processing/src/: CMakeLists.txt  filter.cpp  laplace_pyramid.cpp  queue_worker.cpp
src/: CMakeLists.txt  main.cpp
